force-app/main/default/objects/Orden_Compra__c/Orden_Compra__c.object-meta.xml
<CustomObject>
    <label>Orden de Compra</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Numero de OC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordenes de Compra</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>