force-app/main/default/objects/Orden_Compra__c/fields/Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion__c</fullName>
    <label>Cotizacion</label>
    <type>Lookup</type>
    <referenceTo>Cotizacion__c</referenceTo>
    <relationshipLabel>Ordenes de Compra</relationshipLabel>
    <relationshipName>Ordenes_Compra</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>