force-app/main/default/objects/Orden_Compra__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Borrador</fullName><default>true</default><label>Borrador</label></value>
            <value><fullName>Enviada</fullName><default>false</default><label>Enviada</label></value>
            <value><fullName>Confirmada</fullName><default>false</default><label>Confirmada</label></value>
            <value><fullName>Parcialmente Recibida</fullName><default>false</default><label>Parcialmente Recibida</label></value>
            <value><fullName>Recibida</fullName><default>false</default><label>Recibida</label></value>
            <value><fullName>Cancelada</fullName><default>false</default><label>Cancelada</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>