force-app/main/default/objects/Orden_Compra__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha</label>
    <type>Date</type>
    <defaultValue>TODAY()</defaultValue>
</CustomField>