force-app/main/default/objects/Orden_Compra__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <label>Proveedor</label>
    <type>Lookup</type>
    <referenceTo>Proveedor__c</referenceTo>
    <relationshipLabel>Ordenes de Compra</relationshipLabel>
    <relationshipName>Ordenes_Compra</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>